I guess the textfields must overflow their divs by a little bit. I can't find any way to stop it that doesn't make the webpage ugly.

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -25,7 +25,6 @@ div.field input, div.field textarea {
   width:100%;
   display:block;
   padding:0;
-  border-width:0;
 }
 
 div#day_time_field, div#date_field {
